# CHPlayer

./: CHPlayerV2.chm  MD5 Check  Quick Guide.txt  README.md  Setup_CHPlayerV3.md5  setup.md5
CHPlayerQT/: CHPlayerQT  Debian.txt  chplayerqt-1.0.deb
CHPlayerQT/src/: CMakeLists.txt  Create_From_Src.txt  Makefile  QCHPlayer.pro  Resources.qrc  compile_commands.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_predefs.h  plugins.hpp  qrc_Resources.cpp  ui_mainwindow.h  videoplayer.cpp  vlc_on_qt.cpp  vlc_on_qt.h
Source/: AboutBox1.Designer.cs  AboutBox1.cs  AboutBox1.resx  App.config  CHPlayer.csproj  CHPlayer2.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  protogasm_code_PT2257_2.ino  protogasm_code_PT2257_3.ino
Source/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
